--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,6 +1,7 @@
 body {
   margin: 0px;
   font-size: Arial, Helvetica, sans-serif;
+  color: #111111;
   padding-bottom: 600px;
 }
 
@@ -25,4 +26,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
