--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 @import "./global/global.css";
+@import "./utilidades/tiprografia.css";
+@import "./utilidades/cores.css";
+
 @import "./global/header.css";
+/*utilidades*/
 @import "./utilidades/componentes.css";
 
 /* home */
 @import "./home/introducao.css";
+
+/*bicicletas*/
+@import "./bicicletas/bicicletas-lista.css";
