--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,15 +1,20 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .botao {
   display: inline-block;
   padding: 16px 32px;
   background: linear-gradient(#ffbb00, #f2a50c);
   border-radius: 4px;
   text-transform: uppercase;
-  color: #332200;
+  color: var(--cor-p5);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  font-size: 18px;
-  line-height: 1.33;
-  font-family: "Poppins";
-  font-weight: 600;
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
 }
 
 .botao:hover {
@@ -19,6 +24,6 @@
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
