--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 /* home */
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimento.css";
 
 /*bicicletas*/
 @import "./bicicletas/bicicletas-lista.css";
