--- a/css/utilidades/cores.css
+++ b/css/utilidades/cores.css
@@ -5,7 +5,7 @@
   --cor-3: #dedede;
   --cor-4: #cccccc;
   --cor-5: #b2b2b2;
-  --cor-6: #9c9c9c
+  --cor-6: #9c9c9c;
   --cor-7: #717171;
   --cor-8: #595959;
   --cor-9: #404040;
@@ -14,7 +14,7 @@
   --cor-12: #000000;
   --cor-p1: #ffbb00;
   --cor-p2: #e4a30b;
-  --cor-p3: #A66F00;
+  --cor-p3: #a66f00;
   --cor-p4: #664400;
   --cor-p5: #332200;
 }
