--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
+/*bicicletas*/
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 /*seguros*/
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
